--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Franco Silva</title>
-    <link href="./resources/css/index.css" rel="stylesheet"/>
+    <link href="./index.css" rel="stylesheet"/>
 </head>
 <header>
     <ul>
