--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <main>
 <h1 class="title" id="inicio">Franco Silva</h1>
 <h2 id="quien-soy">¿Quien Soy?</h2>
-<p>Mi nombre es <strong>Franco Silva</strong>, soy estudiante y... <em>un skibidi toilet</em></p>
+<p>Mi nombre es <strong>Franco Silva</strong>, soy <em>un skibidi toilet</em> y... si bro, es que skibidi toilet es</p>
 <img class="absolute-cinema" src="https://preview.redd.it/summrs-what-we-didnt-have-reaction-thread-v0-j89gub36zxob1.jpeg?width=1290&format=pjpg&auto=webp&s=40c38a5a2d224dd820e88a1c141275b97de6d4f1" />
 </main>
 <footer>
